// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders to match snapshot 1`] = `
<div
  style={
    {
      "display": "flex",
      "height": "85px",
      "width": "95%",
    }
  }
>
  <div
    className="Guests-Visual"
    style={
      {
        "borderBottomLeftRadius": 15,
        "borderTopLeftRadius": 15,
        "flex": 2,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
      }
    }
  >
    <div
      className="Guests-Text-container"
      style={
        {
          "fontSize": "75%",
        }
      }
    >
      austin
    </div>
    <div
      className="Guests-Text-container"
      style={
        {
          "fontSize": "50%",
        }
      }
    >
      https://atb-brown.github.io/austin/
    </div>
  </div>
  <div
    className="Guests-Visual Guests-Text-Container"
    style={
      {
        "flex": 7,
        "marginLeft": 3,
        "marginRight": 3,
      }
    }
  >
    <div
      className="Guests-Text-Container"
      style={
        {
          "fontSize": "75%",
          "height": "100%",
          "width": "98%",
        }
      }
    >
      Hello World!
    </div>
  </div>
  <div
    className="Guests-Visual Guests-Text-Container"
    style={
      {
        "borderBottomRightRadius": 15,
        "borderTopRightRadius": 15,
        "flex": 1,
        "fontSize": "60%",
      }
    }
  >
    2023-11-26
  </div>
</div>
`;

exports[`renders without properties 1`] = `
<div
  style={
    {
      "display": "flex",
      "height": "85px",
      "width": "95%",
    }
  }
>
  <div
    className="Guests-Visual"
    style={
      {
        "borderBottomLeftRadius": 15,
        "borderTopLeftRadius": 15,
        "flex": 2,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
      }
    }
  >
    <div
      className="Guests-Text-container"
      style={
        {
          "fontSize": "75%",
        }
      }
    />
    <div
      className="Guests-Text-container"
      style={
        {
          "fontSize": "50%",
        }
      }
    />
  </div>
  <div
    className="Guests-Visual Guests-Text-Container"
    style={
      {
        "flex": 7,
        "marginLeft": 3,
        "marginRight": 3,
      }
    }
  >
    <div
      className="Guests-Text-Container"
      style={
        {
          "fontSize": "75%",
          "height": "100%",
          "width": "98%",
        }
      }
    />
  </div>
  <div
    className="Guests-Visual Guests-Text-Container"
    style={
      {
        "borderBottomRightRadius": 15,
        "borderTopRightRadius": 15,
        "flex": 1,
        "fontSize": "60%",
      }
    }
  />
</div>
`;
